--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint": "^8.50.0",
     "nuxt": "^3.7.4",
     "nuxt-quasar-ui": "^2.0.6",
+    "sass": "^1.69.5",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
