--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxt/devtools": "latest",
     "@nuxtjs/eslint-module": "^4.1.0",
     "@nuxtjs/i18n": "^8.0.0-rc.5",
+    "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
     "eslint": "^8.50.0",
     "nuxt": "^3.7.4",
     "nuxt-quasar-ui": "^2.0.6",
